# jugalbandi-old

./: .dockerignore  .gitignore  .talismanrc  README.md  jb.code-workspace
docs/: CODING_STANDARDS.md  ISSUES_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
docs/standards/: coding_standards.md
jb-auth-service/: README.md  pyproject.toml
jb-auth-service/auth_service/: __init__.py  api.py  auth_service_settings.py  db.py
jb-auth-service/tests/: test_password.py
jb-generic-qa/: .gitignore  README.md  Titles.csv  docker-compose.yaml  pyproject.toml  titles.txt
jb-generic-qa/etc/: dashboards.yaml
jb-generic-qa/etc/dashboards/: fastapi-observability.json
jb-generic-qa/etc/prometheus/: prometheus.yml
jb-generic-qa/generic_qa/: query_with_tfidf.py  server.py  server_env.py  server_helper.py  server_middleware.py
jb-generic-qa/tests/: test_server.py
jb-generic-qa/tools/: Dockerfile  prometheus.yml  run-docker.sh  run-server.sh  utils.py
jb-jiva-service/: .gitignore  README.md  pyproject.toml
jb-jiva-service/jiva/: __init__.py  auth_api.py  db.py  db_settings.py  helper.py  model.py  parsing.py  sections_page_number_parsing.py  sections_splitting_chunking.py  server.py  user_api.py
jb-jiva-service/tests/: conftest.py  test_admin.py  test_search.py
jb-jiva-service/tools/: .npmrc  Dockerfile  data_import.py  generate_schema.py  generate_ts.sh  run-docker.sh  run-server.sh  tsconfig.json
jb-labeling-service/: .flake8  README.md  pyproject.toml
jb-labeling-service/labeling/: api.py  argument_generation.py  argument_generation_csv_preannotations.py  auth_api.py  db.py  db_settings.py  helper.py  model.py
jb-labeling-service/tests/: test_api.py
jb-labeling-service/tools/: Dockerfile  run-docker.sh  run-server.sh
jb-streamlit-ui/: Dockerfile  README.md  pyproject.toml
jb-streamlit-ui/jugalbandi/streamlit-ui/: Create_Knowledge_Base.py  helper.py
jb-streamlit-ui/jugalbandi/streamlit-ui/pages/: Manage_Knowledge_Base.py  Swagger.py
scripts/: README.md
