[tool.poetry]
name = "jb-streamlit-ui"
version = "0.1.0"
description = ""
authors = ["OpenNyAI Team <opennyai@googlegroups.com>"]
readme = "README.md"
packages = [{include = "jugalbandi/streamlit-ui"}]

[tool.poetry.dependencies]
python = ">=3.10, <4.0.0"
pytz = "^2023.3"
pydantic = "1.10.13"
python-dotenv = "^1.0.0"
httpx = "^0.26.0"
passlib = "^1.7.4"
psycopg2-binary = "^2.9.9"
bcrypt = "^3.2.2"
streamlit-modal = "^0.1.2"
jb-tenant = {path = "../packages/jb-tenant", develop = true}
extra-streamlit-components = "^0.1.60"
pyjwt = "^2.8.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
flake8 = "6.0.0"
poethepoet = "^0.20.0"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
Faker = "^18.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poe.tasks.build]
shell = """
docker build --platform=linux/amd64  -f Dockerfile -t gcr.io/indian-legal-bert/jugalbandi_tenant_streamlit_ui:latest ..
"""
help = "build docker container"